--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "minterjs-wallet": "^3.0.3"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "minterjs-wallet": "^3.0.3",
+    "tingodb": "^0.6.1"
   }
 }
